fix: 🐛 changed fill-available to stretch

--- a/packages/gatsby-theme-jamfire-conference/src/components/content/content.module.scss
+++ b/packages/gatsby-theme-jamfire-conference/src/components/content/content.module.scss
@@ -10,7 +10,7 @@
 
   @include tablet-side {
     overflow-y: scroll;
-    height: fill-available;
+    height: stretch;
     height: 100%;
     border-right: 1px solid var(--border-color);
   }
