--- a/packages/gatsby-theme-jamfire-conference/src/components/event-lobby/lobby.module.scss
+++ b/packages/gatsby-theme-jamfire-conference/src/components/event-lobby/lobby.module.scss
@@ -21,7 +21,7 @@
 
   @include tablet-up {
     overflow-y: scroll;
-    height: fill-available;
+    height: stretch;
     height: 100%;
     border-right: 1px solid var(--border-color);
   }
